--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
-.cycleParent .cycleLengthLabel {
+.cycleParent .cycleResults .cycleLengthLabel {
 	border: 1px solid transparent;
 }
 
-.cycleParent .cycleStartLabel {
+.cycleParent .cycleResults .cycleStartLabel {
 	border: 1px solid transparent;
 }
 
-.cycleParent.cycle .cycleLengthLabel {
+.cycleParent.cycle .cycleResults .cycleLengthLabel {
 	border: 1px solid yellow;
 }
 
-.cycleParent.minCycle .cycleLengthLabel {
+.cycleParent.minCycle .cycleResults .cycleLengthLabel {
 	border: 1px solid green;
 }
 
-.cycleParent.cycleStart .cycleStartLabel {
+.cycleParent.cycleStart .cycleResults .cycleStartLabel {
 	border: 1px solid green;
 }
 
