--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,28 @@
  *
 */
 
+body.loading #impress {
+	visibility: hidden;
+}
+
+.blurb {
+	width: 30em;
+}
+
+.cyclecontrol {
+	margin-bottom: 2em;
+}
+
 
 /* Cycle table styles */
 
 .cycleParent td {
+  border: 1px solid black;
+}
+
+.cycleParent td .cellcontent {
   width: 12px;
   height: 12px;
-  border: 1px solid black;
 }
 .cycleParent td.cyclePast {
   background-color: darkgray;
